arreglado handler del primer playbook, creado group y host vars, y modificado el inventario

--- a/nfs_setup.yml
+++ b/nfs_setup.yml
@@ -38,6 +38,8 @@
       notify: Recargar exports
 
   handlers:
-    - name: Recargar exports
-      command: exportfs -r
+    - name: Recargar NFS
+      ansible.builtin.service:
+        name: nfs-server
+        state: restarted
 ...
