--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
-ubuntu01 ansible_host=192.168.1.1 ansible_user=sysadmin
-ubuntu02 ansible_host=192.168.1.11 ansible_user=sysadmin
-centos01 ansible_host=192.168.1.10 ansible_user=sysadmin
+ubuntu01
+ubuntu02
+centos01
 
 [ubuntu]
 ubuntu01
