--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory=./inventory.ini
+inventory=./inventory/inventory.ini
 deprecation_warnings=False
 interpreter_python=auto_silent
