arreglo del handler de nfs

--- a/tasks/nfs_setup.yml
+++ b/tasks/nfs_setup.yml
@@ -35,10 +35,10 @@
         path: /etc/exports
         line: /var/nfs_shared  *(rw,sync,no_root_squash)
         create: yes
-      notify: Recargar exports
+      notify: Recargar nfs
 
   handlers:
-    - name: Recargar NFS
+    - name: Recargar nfs
       ansible.builtin.service:
         name: nfs-server
         state: restarted
