cambiado ansible.cfg para conexion ssh

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,6 @@
 inventory=./inventory/inventory.ini
 deprecation_warnings=False
 interpreter_python=auto_silent
+
+[ssh_connection]
+ssh_args = -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -o TCPKeepAlive=yes -o ControlMaster=auto -o ControlPersist=60s
